--- a/interview_tool_spring/src/main/resources/templates/new-candidate.html
+++ b/interview_tool_spring/src/main/resources/templates/new-candidate.html
@@ -23,7 +23,7 @@
 
         <p>Role</p><!-- TODO question: wrm autocomplete off? -->
         <!-- todo radio button moet met keyboard kunnen worden gechecked -->
-            <input class="btn-check role" type="radio" id="junior" autocomplete="off" th:field="*{role}" th:value="junior" checked>
+            <input class="btn-check role" type="radio" id="junior" autocomplete="off" th:field="*{role}" th:value="junior">
             <label class="btn" for="junior">Junior</label><br>
             <input class="btn-check role" type="radio" id="medior" autocomplete="off" th:field="*{role}" th:value="medior">
             <label class="btn" for="medior">Medior</label><br>
