--- a/interview_tool_spring/src/main/resources/templates/update-employee.html
+++ b/interview_tool_spring/src/main/resources/templates/update-employee.html
@@ -31,6 +31,7 @@
             <label class="btn" for="manager">Competence Manager</label><br>
 
         <div class="alerts"></div>
+        <div class="alerts" th:text="${exists}"></div>
         <input type="submit" class="btn btn-primary btn-lg" id="submit" value="Save">
     </form>
 </main>
