beautifull home button

--- a/interview_tool_spring/src/main/resources/templates/navbar.html
+++ b/interview_tool_spring/src/main/resources/templates/navbar.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="navbar fixed-top bg-body-tertiary">
-            <a th:href="@{/}" class="btn btn-primary btn-lg">Home</a>
+            <a th:href="@{/}" class="btn btn-primary btn-lg"> <i class="bi bi-house-door"></i> Home</a>
             <a th:href="@{/log-out}" class="btn btn-primary btn-lg"> <i class="bi bi-box-arrow-right"></i> Log out</a>
         </nav>
     </header>
